# DataMedic

./: .gitignore  CleanOps_presentation_Final.ipynb  README.md  pyproject.toml
datasets/: cleaned_data.csv
src/: data_doctor.py  data_exporter.py  data_getter.py  data_inspector.py  data_organizer.py  data_preprocessor.py
src/cleanops/: __init__.py  data_getter.py  data_output.py  data_pipeline.py  data_preprocessor.py
src/datamedic/: data_getter.py  data_pipeline.py  data_preprocessor.py  data_visualizer.py
test/: CleanOps Cleaning demo.ipynb
