[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanops"
version = "0.1.4"
description = "A lightweight data cleaning and inspection toolkit."
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Odchigue, Jave Melchor P." },
  { name = "Angni, Sodais M." },
  { name = "Ruiz, Rynzo Rapheal R." },
  { name = "Padillo, Reymart" },
  { name = "Magtrayo, Harold Hope" }
]

dependencies = [
    "pandas"
]

license = "MIT"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[project.urls]
Homepage = "https://github.com/odchigue25206/CleanOps"
Repository = "https://github.com/odchigue25206/CleanOps"
